# gh_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  release-notes.md
class/: CMakeLists.txt
class/include/myheader/: myheader.h
